[package]
name = "libime-history-merge"
description = "A simple CLI for inspecting, merging and editing libime pinyin histories from multiple machines."
version = "0.3.0"
edition = "2021"
authors = ["Gaoyang Zhang <gy@blurgy.xyz>"]
license = "LGPL-2.1-or-later"
repository = "https://github.com/blurgyy/libime-history-merge"
categories = ["command-line-utilities"]
keywords = ["fcitx5", "libime", "history", "edit", "merge"]

[dependencies]
edit = "0.1.5"
libc = "0.2.174"
log = "0.4.27"
pager = "0.16.1"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
structopt = "0.3.26"
zstd = "0.13"

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# Author: Blurgy <gy@blurgy.xyz>
# Date:   Feb 03 2022, 11:51 [CST]
